# MN_Project

./: Proyecto Métodos Numéricos INSTRUCCIONES.md  Proyecto de Métodos Númericos.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
core/: __init__.py  differentiation.py  errors.py  parser.py  richardson.py  visualization.py
tests/: test_smoke.py
ui/: __init__.py  latex_renderer.py  sidebar.py  tables.py
